[tool.poetry]
name = "antaryaami"
version = "0.1.0"
description = "A RAG-based prediction system"
authors = ["bhanu sanghi <bhanussanghi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.14"
langgraph = "^0.2.60"
openai = "^1.59.3"
chromadb = "^0.6.1"
duckduckgo-search = "^7.2.0"
pydantic = "^2.10.4"
ipython = "^8.31.0"
tavily-python = "^0.5.0"
langsmith = "^0.2.6"
langchain-openai = "^0.2.14"
sentence-transformers = "^2.5.1"
huggingface-hub = "^0.21.3"
transformers = "^4.38.1"
torch = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
